SignOut from FirebaseAuth

--- a/app/src/main/res/layout/fragment_fakturat.xml
+++ b/app/src/main/res/layout/fragment_fakturat.xml
@@ -11,7 +11,7 @@
         android:id="@+id/btnfaktura"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/button"
         android:text="Shto Fakturen e re"
         android:textAlignment="center"
@@ -19,62 +19,59 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/myInvbtn"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginBottom="42dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/button"
         android:padding="7dp"
         android:text="Fakturat e Derguara"
         android:textColor="@color/colorwhite"
-        app:layout_constraintBottom_toTopOf="@+id/allinvoicesbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnfaktura"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btnfaktura" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="272dp"
         android:layout_height="36dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="140dp"
         android:fontFamily="@font/ubuntu_bold"
         android:text="FAKTURAT"
         android:textAlignment="center"
         android:textColor="@color/ColorblueSecondary"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnfaktura"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
         android:src="@drawable/appicon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.852" />
 
     <Button
         android:id="@+id/allinvoicesbtn"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="144dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/button"
         android:text="Fakturat"
         android:textColor="@color/colorwhite"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myInvbtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
