All_InvoicesActivity added, invoices sent with users name

--- a/app/src/main/res/layout/allinvoices_item.xml
+++ b/app/src/main/res/layout/allinvoices_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/allinv_item_title"
         android:layout_width="161dp"
         android:layout_height="21dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="16dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -18,14 +18,13 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintTop_toBottomOf="@+id/allinv_item_usersname"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/allinv_item_sum"
         android:layout_width="161dp"
         android:layout_height="21dp"
-        android:layout_marginStart="24dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -33,8 +32,19 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.868"
+        app:layout_constraintHorizontal_bias="0.904"
         app:layout_constraintStart_toEndOf="@+id/allinv_item_title"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintTop_toBottomOf="@+id/allinv_item_usersname"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/allinv_item_usersname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
