--- a/app/src/main/res/layout/activity_new_products.xml
+++ b/app/src/main/res/layout/activity_new_products.xml
@@ -49,7 +49,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/ubuntu_bold"
             android:gravity="center"
-            android:text="Cmimi"
+            android:text="Cmimi(Euro)"
             android:textColor="@color/colorgray"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintHorizontal_bias="0.137"
