--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -52,20 +52,19 @@
         app:layout_constraintTop_toBottomOf="@+id/txtHEmaili"
         app:layout_constraintVertical_bias="1.0" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imgProfili"
         android:layout_width="96dp"
         android:layout_height="98dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/buttonwhite"
-        android:tint="@color/colorPrimaryDarker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_llogaria" />
+        app:civ_border_width="2dp"
+        app:civ_border_color="#065B9F"/>
 
     <TextView
         android:id="@+id/txtHEmaili"
