--- a/app/src/main/res/layout/fragment_btn_porosite.xml
+++ b/app/src/main/res/layout/fragment_btn_porosite.xml
@@ -77,7 +77,7 @@
         android:background="@drawable/button"
         android:paddingLeft="10sp"
         android:paddingRight="10sp"
-        android:text="Porosite"
+        android:text="Produktet"
         android:textColor="@color/colorwhite"
         android:textColorHighlight="@color/colorwhite"
         android:textColorHint="@color/colorwhite"
