--- a/app/src/main/res/layout/adapterview.xml
+++ b/app/src/main/res/layout/adapterview.xml
@@ -8,48 +8,50 @@
     android:weightSum="100"
     android:layout_marginTop="20dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="50"
-        android:weightSum="100">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="56dp"-->
+<!--        android:layout_weight="50"-->
+<!--        android:weightSum="100">-->
+
         <ImageView
-            android:layout_marginTop="7dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="90dp"
+            android:id="@+id/image"
+            android:layout_width="30dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
             android:layout_weight="50"
-            android:id="@+id/image"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="TextView1"
-        android:id="@+id/textView1"
-        android:layout_weight="50"
-        android:textStyle="bold"/> </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="50">
+            android:src="@drawable/mann"/>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:id="@+id/textView2"
-            android:text="TextView2"
-            android:gravity="center" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:id="@+id/textView3"
-            android:text="TextView3"
-            android:textStyle="bold"
-            android:textColor="#006600"
+            android:id="@+id/textView1"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_weight="50"
             android:gravity="center"
-            android:layout_below="@id/textView2"/>
-    </LinearLayout>
-</LinearLayout>
+            android:text="@+id/textView1"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="363dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_weight="50"-->
+        <!--            android:orientation="vertical">-->
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:text="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/textView2"
+            android:gravity="center"
+            android:text="@+id/textView3"
+            android:textColor="#006600"
+            android:textStyle="bold" /></LinearLayout>
