--- a/app/src/main/res/layout/adapterview.xml
+++ b/app/src/main/res/layout/adapterview.xml
@@ -16,7 +16,7 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="30dp"
+            android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="7dp"
@@ -25,13 +25,14 @@
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="150dp"
+            android:layout_width="199dp"
             android:layout_height="60dp"
             android:layout_weight="50"
             android:gravity="center"
             android:text="@+id/textView1"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textSize="15dp"/>
 
         <!--        <LinearLayout-->
         <!--            android:layout_width="363dp"-->
@@ -54,4 +55,5 @@
             android:gravity="center"
             android:text="@+id/textView3"
             android:textColor="#006600"
-            android:textStyle="bold" /></LinearLayout>
+            android:textStyle="bold" />
+</LinearLayout>
