--- a/app/src/main/res/layout/adapterview_notpaid.xml
+++ b/app/src/main/res/layout/adapterview_notpaid.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/adapterview"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,48 +8,52 @@
     android:weightSum="100"
     android:layout_marginTop="20dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="56dp"-->
+    <!--        android:layout_weight="50"-->
+    <!--        android:weightSum="100">-->
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="7dp"
         android:layout_weight="50"
-        android:weightSum="100">
-        <ImageView
-            android:layout_marginTop="7dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="90dp"
-            android:layout_height="50dp"
-            android:layout_weight="50"
-            android:id="@+id/image"/>
+        android:src="@drawable/mann"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="TextView1"
         android:id="@+id/textView1"
+        android:layout_width="199dp"
+        android:layout_height="60dp"
         android:layout_weight="50"
-        android:textStyle="bold"/> </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="50">
+        android:gravity="center"
+        android:text="@+id/textView1"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="15dp"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:id="@+id/textView2"
-            android:text="TextView2"
-            android:gravity="center" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:id="@+id/textView3"
-            android:text="TextView3"
-            android:textColor="#cc3300"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_below="@id/textView2"/>
-    </LinearLayout>
+    <!--        <LinearLayout-->
+    <!--            android:layout_width="363dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="50"-->
+    <!--            android:orientation="vertical">-->
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="90dp"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:text="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="130dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/textView2"
+        android:gravity="center"
+        android:text="@+id/textView3"
+        android:textColor="#cc3300"
+        android:textStyle="bold" />
 </LinearLayout>
