--- a/app/src/main/res/layout/activity_all__invoices.xml
+++ b/app/src/main/res/layout/activity_all__invoices.xml
@@ -4,16 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".All_InvoicesActivity">
 
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/allInvoices_list"
-      android:layout_width="409dp"
-      android:layout_height="729dp"
-      android:layout_marginTop="50dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.02" />
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/allInvoices_list"
+          android:layout_width="409dp"
+          android:layout_height="729dp"
+          android:layout_marginTop="50dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_bias="0.02" />
+
+    </LinearLayout>
+
+  </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
